- Added variable $_SERVER['REQUEST_TIME'] containing request start time. (Ilia)
- Added optional float parameter to gettimeofday(). (Ilia)
- Added apache_reset_timeout() Apache1 function. (Rasmus)
- Added sqlite_fetch_column_types() 3rd argument for arrays. (Ilia)
- Added optional offset parameter to stream_get_contents() and
  file_get_contents(). (Ilia)
- Added SAPI hook to get the current request time. (Rasmus)
- Added new functions:
  . array_diff_key() (Andrey)
  . array_diff_ukey() (Andrey)
  . array_intersect_key() (Christiano Duarte)
  . array_intersect_ukey() (Christiano Duarte)
  . stream_context_get_default() (Wez)
  . stream_socket_enable_crypto() (Wez)
  . stream_wrapper_unregister() (Sara)
  . stream_wrapper_restore() (Sara)
  . stream_filter_remove() (Sara)
  . DomDocumentFragment::appendXML() (Christian)
  . SimpleXMLElement::registerXPathNamespace() (Christian)
  . mysqli::client_info property (Georg)
  . inet_pton() (Sara)
  . inet_ntop() (Sara)
  . fputcsv() (David Sklar)
  . posix_access() (Magnus)
- Added DomDocument::$recover property for parsing not well-formed
  XML Documents. (Christian)   
- Added Cursor support for MySQL 5.0.x in mysqli (Georg)
- Added proxy support to ftp wrapper via http. (Sara)
- Added MDTM support to ftp_url_stat. (Sara)
- Added zlib stream filter support. (Sara)
- Added bz2 stream filter support. (Sara)
- Added HTTP/1.1 and chunked encoding support to http:// wrapper. (Sara)
- Added support of parameter=>value arrays to
  xsl_xsltprocessor_set_parameter(). (Tony)
- Fixed extension initialization to respect dependancies between extensions.
  (Wez)
- Fixed a problem with SPL iterators aggregating the innner iterator. (Marcus)
- Fixed bug with raw_post_data not getting set. (Brian)
- Fixed bug in mysql::client_version(). (Georg)
- Fixed ZTS destruction. (Marcus)
- Fixed bug #31478 (segfault with empty() / isset()). (Moriyoshi)
- Fixed bug #29728 (Reflection API Feature: Default parameter value). (Marcus)